# VideoSearch-R1

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html
preprocess/annotation_process/: build_faiss.py  build_hard_negatives_npy.py  eval_retrieval.py  eval_retrieval_npy.py  prepare_activitynet_segments.py
preprocess/data_annotation_process/: __init__.py  build_verified_search_minimal_top1.py
preprocess/dataset_generation/: README.md  build_top1_pool.py  convert_match_grounding_to_oneturn.py  generate_match_grounding.py  vllm.bash
preprocess/extract_embed/: __init__.py  embed_queries.py  embed_segments.py  retry_failed_segments.py
preprocess/extract_npy/: extract_npy.py
preprocess/scripts_activitynet/: 00_data_download.bash  01_data_generate.bash  02_embed_queries.bash  02_embed_segments.bash  03_build_index.bash  04_extract_test_npy.bash  04_extract_train_npy.bash  05_build_top1_pool.bash  05_generate_match_grounding.bash  05_repair_match_grounding.bash  06_convert_to_train_oneturn.bash  07_eval_test_retrieval_npy.bash  08_build_hard_negatives.bash  09_build_verified_search_minimal_top1.bash  extract_train_npy.bash
preprocess/scripts_charades/: 00_data_download_charades.bash  01_data_generate_charades.bash  02_embed_queries_charades.bash  02_embed_segments_charades.bash  04_extract_test_npy_charades.bash  (+9 more)
scripts/: download_checkpoint.bash  download_data.bash
videosearch_r1/: train_grpo_qwen2_5_vl.py  train_grpo_qwen3_vl.py  train_sft_qwen2_5_vl.py  train_sft_qwen2_5_vl_share_gpt.py  train_sft_qwen3_vl_share_gpt.py
(+82 files in other folders)
